# sympoly

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp
include/sympoly/: debug.hpp  functional_support.h  lazy_operators.hpp  operators.hpp  polynomial.hpp  utils.hpp
include/sympoly/internal/: monomial.hpp
